# faker-rs

./: Cargo.toml  build.rs
locales/: en-US.toml  en.toml
src/: faker.rs  lib.rs  main.rs
