[package]

name = "faker"
version = "0.0.1"
authors = ["Seth Pollack <teampollack@gmail.com>"]
build = "build.rs"
license = "MIT/Apache-2.0"
homepage = "https://github.com/sethpollack/faker-rs"
repository = "https://github.com/sethpollack/faker-rs"
description = "A library for generating fake data such as names, addresses, and phone numbers."

[dependencies]
toml = "0.1.3"